src/tests/snapshots/synoik__tests__window_opening__check_fullscreen_maximize@wmBU.snap
---
source: src/tests/window_opening.rs
description: "want maximized: BU"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
