src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@fsF-wfsAU-spA2.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nwant fullscreen: AU\nset parent: A2"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
