src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@fsF-wfsAU-spB2.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nwant fullscreen: AU\nset parent: B2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 0 × 0, bounds: 1900 × 1060, states: []

post-map configures:
size: 0 × 0, bounds: 1900 × 1060, states: []
size: 1 × 1, bounds: 1900 × 1060, states: []
